--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,9 @@ docs:
   title: audio/visual
   url: pages/av.html
 -
+  title: lessons
+  url: pages/lessons.html
+-
   title: contact
   url: pages/contact.html
 
